syntax = "proto3";

package br.com.dazo.stream;
option java_multiple_files = true;


service StreamController {
  rpc serverSideStream (MensagemInput) returns (stream MensagemOutput) {}
}

message MensagemInput {
  string dado = 1;
}


message MensagemOutput {
  string dado = 1;
}